# SecureCopyPaste

./: .gitignore  KEYBOARD_SHORTCUT_GUIDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
config/: config.example.yaml
src/scrub/: __init__.py  cli.py  clipboard.py  config.py  scrubber.py
src/scrub/recognizers/: __init__.py  corporate.py  denylist.py  domains.py  uk_phone.py
